program lista zakupow

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #2663BF;
+  margin-left: 35%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.delete{
+  background-color: brown;
+}
+
+.list-item{
+  background-color: #2E77E6;
+  width: 10%;
 }
